fixed about us alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,8 +573,12 @@ section {
   font-size: 26px;
 }
 .about img {
-  width: 100%;
-  height: 39rem;
+  width: 85%;
+  height: 35rem;
+  margin-left: 15px;
+}
+.about .content p {
+  line-height: 30px;
 }
 .about .content ul {
   list-style: none;
@@ -583,6 +587,7 @@ section {
 
 .about .content ul li {
   padding-bottom: 10px;
+  width: 110%;
 }
 
 .about .content ul i {
